--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
     </div>
   </div>
   <script src="script.js"></script>
+  <script src="portfolio-animate.js"></script>
   <script>
     document.getElementById("contactForm").addEventListener("submit", function (e) {
       e.preventDefault();
