--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       </div>
       <div class="footer-column">
         <h4>Contact</h4>
-        <p>Email: <a href="mailto:spiderwebsonline25@gmail.com">hello@spiderwebs.com</a></p>
+        <p>Email: <a href="mailto:spiderwebsonline25@gmail.com">spiderwebsonline25@gmail.com</a></p>
         <p>Phone: +233 55 822 1704</p>
       </div>
       <div class="footer-column">
