--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         </div>
       </div>
     </section>
+    <!-- Only ONE contact section below -->
     <section id="contact" class="contact-section parallax-section">
       <div class="contact-catchy-wrapper">
         <div class="contact-catchy-side">
