--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,26 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    .header {
+      background: #111 !important;
+      color: #fff !important;
+    }
+    .header .logo,
+    .header .navbar a {
+      color: #fff !important;
+    }
+    
+    .header .navbar a {
+      color: #fff !important;
+      transition: color 0.2s;
+    }
+
+    .header .navbar a:hover,
+    .header .navbar a:focus {
+      color: #1e90ff !important;
+    }
+  </style>
 </head>
 <body class="blog-page">
   <header class="header">
