--- a/blog.html
+++ b/blog.html
@@ -146,26 +146,43 @@
   </main>
 
   <footer class="footer">
+    <div class="footer-logo">
+      <img src="footer.png" alt="Spiderwebs Logo" style="height:60px; width:auto; margin-bottom:18px;">
+    </div>
     <div class="footer-container">
       <div class="footer-column">
-        <h4>About Spiderwebs</h4>
-        <p>We craft digital experiences that are visually stunning and strategically designed to grow your business.</p>
+        <h4>About Us</h4>
+        <p>Spiderwebs Agency is dedicated to crafting exceptional digital experiences that empower businesses to thrive online.</p>
       </div>
       <div class="footer-column">
         <h4>Quick Links</h4>
-        <a href="index.html#home">Home</a> |
-        <a href="index.html#about">About</a> |
-        <a href="index.html#services">Services</a> |
-        <a href="index.html#portfolio">Portfolio</a>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
       <div class="footer-column">
         <h4>Contact</h4>
-        <p>Email: <a href="mailto:spiderwebs25@gmail.com">spiderwebs25@gmail.com</a></p>
-        <p>Phone: +233 55 8221704</p>
+        <p>Email: <a href="mailto:spiderwebsonline25@gmail.com">spiderwebsonline25@gmail.com</a></p>
+        <p>Phone: +233 55 822 1704</p>
+      </div>
+      <div class="footer-column">
+        <h4>Follow Us</h4>
+        <div class="footer-icons">
+          <a href="https://www.instagram.com/spiderwebs.online?igsh=MWNta2pxbmN6bGY5NA==">
+            <img src="https://img.icons8.com/?size=100&id=BrU2BBoRXiWq&format=png&color=000000" alt="Instagram" width="24" height="24">
+          </a>
+          <a href="https://www.linkedin.com/in/spider-webs-931865367">
+            <img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="LinkedIn" width="24" height="24">
+          </a>
+        </div>
       </div>
     </div>
     <div class="footer-bottom">
-      &copy; 2025 Spiderwebs Agency. All rights reserved.
+      <p>&copy; 2025 Spiderwebs Agency. All Rights Reserved.</p>
     </div>
   </footer>
   <script src="script.js"></script>
