--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <p>High-quality, responsive websites built with the latest technologies.</p>
         </div>
         <div class="service-card">
-          <h3>SEO Optimization</h3>
+          <h3>SEO Services</h3>
           <p>Boost your online visibility and drive more traffic to your site.</p>
         </div>
         <div class="service-card">
