--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <div class="footer-column">
         <h4>Contact</h4>
         <p>Email: <a href="mailto:spiderwebsonline25@gmail.com">spiderwebsonline25@gmail.com</a></p>
-        <p>Phone: +233 55 822 1704</p>
+        <p>Phone: +233 55 822 1704<br> +233 53 718 2073</p>
       </div>
       <div class="footer-column">
         <h4>Follow Us</h4>
